Update media CSS detail propduct
Update media CSS detail prodcut

--- a/public/frontend/css/single-product-details.css
+++ b/public/frontend/css/single-product-details.css
@@ -9,7 +9,20 @@
     flex-wrap: wrap; 
     gap: 20px; 
     align-items: flex-start;
-    margin: 20px;
+    max-width: 1200px;
+    justify-content: center; 
+    margin-left: 220px;
+    margin-bottom: 30px;
+}
+
+@media only screen and (max-width: 767px) {
+    .product-container {
+        margin-left: 0;
+        padding: 10px;
+        gap: 10px;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .product-image1 {
@@ -20,14 +33,14 @@
 
 .product-image1 img {
     width: 100%;
-    max-width: 300px; 
+    max-width: 500px; 
     border: 1px solid #ddd;
     border-radius: 5px;
 }
 
 .product-details {
     flex: 2; 
-    padding-left: 20px;
+    padding-left: 50px;
 }
 
 .product-details h1 {
@@ -52,13 +65,13 @@
     padding: 5px 10px;
     border: 1px solid #ddd;
     border-radius: 3px;
-    background-color: #f9f9f9;
+    background-color: black;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
 .version-button:hover {
-    background-color: #eaeaea;
+    background-color: black;
 }
 
 .status-price {
