--- a/public/frontend/css/cart.css
+++ b/public/frontend/css/cart.css
@@ -1,4 +1,3 @@
-
 /* General Styles */
 body {
     font-family: Arial, sans-serif;
@@ -9,7 +8,10 @@ body {
     line-height: 1.5;
 }
 
-h1, h4, h5, p {
+h1,
+h4,
+h5,
+p {
     margin: 0;
 }
 
@@ -34,7 +36,8 @@ h1, h4, h5, p {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.cart-container th, .cart-container td {
+.cart-container th,
+.cart-container td {
     padding: 12px;
     text-align: center;
     border: 1px solid #ddd;
@@ -54,27 +57,22 @@ h1, h4, h5, p {
 }
 
 .quantity-buttons {
-    margin-top: 2px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 5px;
+    margin-top: 30px;
 }
 
 .quantity-buttons button {
-    width: 36px;
-    height: 36px;
-    border: 1px solid #000;
     background-color: #fff;
+    border: 1px solid #ddd;
     color: #000;
-    border-radius: 4px;
     cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 18px;
+    font-size: 16px;
+    padding: 5px 10px;
+    border-radius: 5px;
 }
-
+.quantity {
+    margin-left: 20px;
+    margin-right: 20px;
+}
 .quantity-buttons button:hover {
     background-color: #000;
     color: #fff;
