--- a/public/frontend/css/pagination.css
+++ b/public/frontend/css/pagination.css
@@ -19,8 +19,7 @@
 }
 
 .pagination .page-link:hover {
-    background-color: #000;
-    color: #fff;
+    color: white;
 }
 
 .pagination {
@@ -44,11 +43,7 @@
     align-items: center;
 }
 
-.pagination .page-item .page-link:hover,
-.pagination .page-item .page-link:focus {
-    color: #000000;
-    box-shadow: none;
-}
+
 
 .pagination .page-item:first-child {
     margin-right: 15px;
