--- a/public/backend/css/footer.css
+++ b/public/backend/css/footer.css
@@ -1,7 +1,10 @@
 .footer-copy-right {
+    position: relative;
+    bottom: 0;
+    width: 100%;
     background-color: #000; 
     color: #fff; 
-    text-align: center; 
+    text-align: center;
     padding: 15px 0;
     font-size: 14px;
 }
