--- a/public/frontend/css/header.css
+++ b/public/frontend/css/header.css
@@ -80,21 +80,24 @@
     }
 }
 
+/* Tổng thể menu chính */
 .header_area .classynav ul li a {
     font-size: 16px;
-    color: #787878;
+    color: #ffffff;
+    transition: color 0.3s ease; 
 }
 
 .header_area .classynav ul li a:hover {
     color: #000000;
 }
 
+/* Menu con trong MegaMenu và Dropdown */
 .header_area .classynav ul li .megamenu li a,
 .header_area .classynav ul li .dropdown li a {
     font-size: 14px;
-    color: #787878;
+    color: #000000;
+    transition: color 0.3s ease;
 }
-
 .header_area .classynav ul li .megamenu li a:hover,
 .header_area .classynav ul li .dropdown li a:hover {
     color: #000000;
