Sửa css trang account phân hệ người dùng
Sửa css trang account phân hệ người dùng

--- a/public/frontend/css/account.css
+++ b/public/frontend/css/account.css
@@ -1,7 +1,51 @@
+
+.ctn-rating-product {
+    max-width: 1600px;
+    padding: 20px;
+    margin-left: 10px ;
+}
+
+.header {
+    text-align: center;
+    background-color: black;
+    color: white;
+    height: 55px;
+}
+
+.header h1 {
+    color: white;
+}
+.ctn-rating-product p{
+    text-align: center;
+}
+
+.navigation ul {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    margin: 20px 0;
+    padding: 0;
+}
+
+.navigation li {
+    margin: 0 15px;
+}
+
+.navigation a {
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+}
+
+.navigation a.active {
+    color: black;
+    border-bottom: 2px solid black;
+}
+
+
 .account-container {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-color: #f9f9f9;
     color: #333;
     padding: 20px;
 }
