--- a/public/frontend/css/rating-product.css
+++ b/public/frontend/css/rating-product.css
@@ -1,13 +1,14 @@
 .container-rating-product {
     font-family: Arial, sans-serif;
     line-height: 1.6;
+    background-color: #f9f9f9;
     color: #333;
 }
-
-
 .ctn-rating-product {
     max-width: 1600px;
     padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-left: 10px ;
 }
 
@@ -47,7 +48,6 @@
     color: black;
     border-bottom: 2px solid black;
 }
-
 .ctn-body-rating-product {
     display: flex;
     flex-direction: column;
@@ -57,13 +57,15 @@
     display: flex;
     align-items: center;
     gap: 20px;
+    background-color: #fff;
     padding: 15px;
     border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .product-image {
-    width: 130px;
-    height: 130px;
+    width: 300px;
+    height: 300px;
     object-fit: cover;
     border-radius: 10px;
     margin-left: 70px;
@@ -89,7 +91,7 @@
 }
 
 .description {
-    height: 100px;
+    height: 300px;
     background-color: #dcdcdc;
     border-radius: 5px;
     margin-bottom: 50px;
