--- a/public/frontend/css/oder-history.css
+++ b/public/frontend/css/oder-history.css
@@ -1,5 +1,4 @@
-.container-oder-history{
-    font-family: Arial, sans-serif;
+.container-oder-history {
     line-height: 1.6;
 }
 .ctn-oder-history {
@@ -18,7 +17,7 @@
 .header h1 {
     color: white;
 }
-.ctn-oder-history p{
+.ctn-oder-history p {
     text-align: center;
 }
 
@@ -48,7 +47,7 @@
 .content {
     margin-top: 20px;
 }
-.ctn-order{
+.ctn-order {
     display: flex;
     column-gap: 4vw;
 }
@@ -81,9 +80,9 @@
     padding: 30px;
     text-align: center;
 }
-.order-table th{
-font-weight: bold;
-font-size: 20px;
+.order-table th {
+    font-weight: bold;
+    font-size: 20px;
 }
 .vertical-line {
     width: 1px;
@@ -91,6 +90,9 @@ font-size: 20px;
     background-color: #000;
     margin-top: 70px;
 }
-.quantity, .price-oh, .total, .name {
+.quantity,
+.price-oh,
+.total,
+.name {
     font-weight: bold;
 }
