--- a/public/frontend/css/rating-product.css
+++ b/public/frontend/css/rating-product.css
@@ -1,14 +1,12 @@
 .container-rating-product {
-    font-family: Arial, sans-serif;
     line-height: 1.6;
     color: #333;
 }
 
-
 .ctn-rating-product {
     max-width: 1600px;
     padding: 20px;
-    margin-left: 10px ;
+    margin: 0 auto;
 }
 
 .header {
@@ -21,7 +19,7 @@
 .header h1 {
     color: white;
 }
-.ctn-rating-product p{
+.ctn-rating-product p {
     text-align: center;
 }
 
@@ -48,13 +46,14 @@
     border-bottom: 2px solid black;
 }
 
-
-
-
 .ctn-body-rating-product {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    width: 100%;
 }
 .product-item {
     display: flex;
